--- a/App.Web/Views/BepSubmission/Create.cshtml
+++ b/App.Web/Views/BepSubmission/Create.cshtml
@@ -26,7 +26,7 @@
                 Program
             </td>
             <td class="control">
-                @Html.DropDownListFor(model => model.ProgramId, Model.Sources)
+                @Html.DropDownListFor(model => model.ProgramId, Model.Sources,  new { @class = "searchable-dropdown form-control" })
                 @Html.ValidationMessageFor(model => model.ProgramId)
             </td>
         </tr>
@@ -36,7 +36,7 @@
                 Division
             </td>
             <td class="control">
-                @Html.DropDownListFor(model => model.DivisionId, Model.Divisions)
+                @Html.DropDownListFor(model => model.DivisionId, Model.Divisions,  new { @class = "searchable-dropdown form-control" })
                 @Html.ValidationMessageFor(model => model.DivisionId)
             </td>
         </tr>
@@ -46,7 +46,7 @@
                 District
             </td>
             <td class="control">
-                @Html.DropDownListFor(model => model.DistrictId, Model.Districts)
+                @Html.DropDownListFor(model => model.DistrictId, Model.Districts,  new { @class = "searchable-dropdown form-control" })
                 @Html.ValidationMessageFor(model => model.DistrictId)
             </td>
         </tr>
@@ -55,14 +55,14 @@
                 Date
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.Date, "{0:dd MMM, yyyy}", new { @class = "span2", @placeholder = "Date" })
+                @Html.TextBoxFor(model => model.Date, "{0:dd MMM, yyyy}", new { @class = "input-group datepicker flatpickr form-control input", @placeholder = "Date" })
                 @Html.ValidationMessageFor(model => model.Date)
             </td>
         </tr>
         <tr>
             <td class="control">
                 <p>
-                    <input id="save-submit" type="submit" value="Next" class="btn btn-primary" />
+                    <input id="save-submit" type="submit" value="Next" class="btn btn-bracify font-color-white" />
                 </p>
             </td>
         </tr>
