--- a/App.Web/Views/BepSubmission/IndexCount.cshtml
+++ b/App.Web/Views/BepSubmission/IndexCount.cshtml
@@ -83,7 +83,7 @@
                 </div>
 
                 <div class="filter-item">
-                    <label for="filter_district">জেলা</label>
+                    <label for="filter_district">বিভাগ</label>
 
                     @Html.DropDownListFor(model => model.ContentTypeId1, Model.ContentTypes1, "All Districts", new { @class = "searchable-dropdown form-control" })
 
