--- a/App.Web/Views/HnppSubmission/Create.cshtml
+++ b/App.Web/Views/HnppSubmission/Create.cshtml
@@ -24,7 +24,7 @@
                 জেলা
             </td>
             <td class="control">
-                @Html.DropDownListFor(model => model.DistrictId, Model.Districts)
+                @Html.DropDownListFor(model => model.DistrictId, Model.Districts, new { @class = "searchable-dropdown form-control" })
                 @Html.ValidationMessageFor(model => model.DistrictId)
             </td>
         </tr>
@@ -33,7 +33,7 @@
                 উপজেলা / থানা
             </td>
             <td class="control">
-                @Html.DropDownListFor(model => model.UpazillaId, Model.Upazillas)
+                @Html.DropDownListFor(model => model.UpazillaId, Model.Upazillas, new { @class = "searchable-dropdown form-control" })
                 @Html.ValidationMessageFor(model => model.UpazillaId)
             </td>
         </tr>
@@ -42,7 +42,7 @@
                 তারিখ
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.Date, "{0:dd MMM, yyyy}", new { @class = "span2", @placeholder = "Date" })
+                @Html.TextBoxFor(model => model.Date, "{0:dd MMM, yyyy}", new { @class = "input-group datepicker flatpickr form-control input", @placeholder = "Date" })
                 @Html.ValidationMessageFor(model => model.Date)
             </td>
         </tr>
@@ -55,11 +55,11 @@
             <td class="title">
                 SS
                 <span data-toggle="tooltip" data-placement="top" title="Shastho Shebika<br>স্বাস্থ্য সেবিকা">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.RiskBySS)
+                @Html.TextBoxFor(model => model.RiskBySS, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.RiskBySS)
             </td>
         </tr>
@@ -67,11 +67,11 @@
             <td class="title">
                 SK
                 <span data-toggle="tooltip" data-placement="top" title="Shashto Kormi<br>স্বাস্থ্য কর্মী">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.RiskBySK)
+                @Html.TextBoxFor(model => model.RiskBySK, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.RiskBySK)
             </td>
         </tr>
@@ -79,11 +79,11 @@
             <td class="title">
                 PK
                 <span data-toggle="tooltip" data-placement="top" title="Pushti Kormi<br>পুষ্টি কর্মী">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.RiskByPK)
+                @Html.TextBoxFor(model => model.RiskByPK, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.RiskByPK)
             </td>
         </tr>
@@ -91,11 +91,11 @@
             <td class="title">
                 PA
                 <span data-toggle="tooltip" data-placement="top" title="Program Assistant<br>প্রোগ্রাম সহকারী">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.RiskByPA)
+                @Html.TextBoxFor(model => model.RiskByPA, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.RiskByPA)
             </td>
         </tr>
@@ -103,11 +103,11 @@
             <td class="title">
                 AM
                 <span data-toggle="tooltip" data-placement="top" title="Area Manager<br>এলাকার ম্যানেজার">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.RiskByAM)
+                @Html.TextBoxFor(model => model.RiskByAM, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.RiskByAM)
             </td>
         </tr>
@@ -115,11 +115,11 @@
             <td class="title">
                 লিফলেট বিতরণ
                 <span data-toggle="tooltip" data-placement="top" title="Number of Leaflets distributed in this district<br>জেলায় বিতরণকৃত লিফলেটের সংখ্যা">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.Leaflet)
+                @Html.TextBoxFor(model => model.Leaflet, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.Leaflet)
             </td>
         </tr>
@@ -127,11 +127,11 @@
             <td class="title">
                 স্টিকার বিতরণ
                 <span data-toggle="tooltip" data-placement="top" title="Number of Stickers distributed in this district<br>জেলায় বিতরণকৃত স্টিকারের সংখ্যা">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.Sticker)
+                @Html.TextBoxFor(model => model.Sticker, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.Sticker)
             </td>
         </tr>
@@ -139,11 +139,11 @@
             <td class="title">
                 কেস সংখ্যা
                 <span data-toggle="tooltip" data-placement="top" title="Number of cases in this district<br>এই জেলায় মোট কেস- এর সংখ্যা">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.CaseCnt)
+                @Html.TextBoxFor(model => model.CaseCnt, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.CaseCnt)
             </td>
         </tr>
@@ -151,7 +151,7 @@
             <th class="title" colspan="2">
                 ব্র্যাক সমন্বয় মিটিং
                 <span data-toggle="tooltip" data-placement="top" title="Meetings coordinated by BRAC in this district<br>এই জেলায় ব্র্যাক কর্তৃক আয়োজিত মিটিং">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </th>
         </tr>
@@ -159,11 +159,11 @@
             <td class="title">
                 মিটিং সংখ্যা
                 <span data-toggle="tooltip" data-placement="top" title="Number of BRAC coordinated meetings that have been held<br>এই জেলায় ব্র্যাক কর্তৃক আয়োজিত মিটিং এর সংখ্যা">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.BracMeeting)
+                @Html.TextBoxFor(model => model.BracMeeting, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.BracMeeting)
             </td>
         </tr>
@@ -171,11 +171,11 @@
             <td class="title">
                 অংশহগ্রহণকারী
                 <span data-toggle="tooltip" data-placement="top" title="Number of participants of these meetings<br>মিটিংগুলোতে  অংশগ্রহণকারীর সংখ্যা">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.BracParticipant)
+                @Html.TextBoxFor(model => model.BracParticipant, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.BracParticipant)
             </td>
         </tr>
@@ -183,29 +183,31 @@
             <th class="title" colspan="2">
                 সরকারী সমন্বয় মিটিং
                 <span data-toggle="tooltip" data-placement="top" title="Meetings coordinated by the government in this district<br>এই জেলায় সরকার কর্তৃক আয়োজিত  মিটিং">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </th>
         </tr>
         <tr>
-            <td class="title">মিটিং সংখ্যা
+            <td class="title">
+                মিটিং সংখ্যা
                 <span data-toggle="tooltip" data-placement="top" title="Number of government coordinated meetings that have been held<br>এই জেলায় সরকার কর্তৃক আয়োজিত  মিটিং এর সংখ্যা">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.GovtMeeting)
+                @Html.TextBoxFor(model => model.GovtMeeting, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.GovtMeeting)
             </td>
         </tr>
         <tr>
-            <td class="title">অংশহগ্রহণকারী
+            <td class="title">
+                অংশহগ্রহণকারী
                 <span data-toggle="tooltip" data-placement="top" title="Number of participants of these meetings<br>মিটিংগুলোতে  অংশগ্রহণকারীর সংখ্যা">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextBoxFor(model => model.GovtParticipant)
+                @Html.TextBoxFor(model => model.GovtParticipant, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.GovtParticipant)
             </td>
         </tr>
@@ -213,28 +215,27 @@
             <td class="title">
                 মন্তব্য
                 <span data-toggle="tooltip" data-placement="right" title="Enter any Comments / Feedback you may have<br>আপনার কোনো মন্তব্য থাকলে তা লিখুন">
-                    <img src="~/Content/tools.png" width="30" />
+                    <img src="~/Content/toolsgray.png" width="30" />
                 </span>
             </td>
             <td class="control">
-                @Html.TextAreaFor(model => model.Description)
+                @Html.TextAreaFor(model => model.Description, new { @class = "input-group form-control" })
                 @Html.ValidationMessageFor(model => model.Description)
             </td>
         </tr>
-        <tr>
-            <td class="control">
-                <p>
-                    <input id="save-submit" type="submit" value="সেভ করুন" class="btn btn-primary" />
-                </p>
-            </td>
-        </tr>
+
     </table>
+    <div class="control mt-3">
+        <p>
+            <input id="save-submit" type="submit" value="সেভ করুন" class="btn btn-bracify font-color-white">
+        </p>
+    </div>
 
 }
 <script type="text/javascript">
     ValidatateForm("form0");
     $(document).ready(function () {
-         
+
         $("#save-submit").click(function () {
 
             if (!confirm("Do you want to Save?")) {
