--- a/App.Web/Views/Main/Index.cshtml
+++ b/App.Web/Views/Main/Index.cshtml
@@ -15,7 +15,7 @@
             </li>
         </ul>
         <span class="abc" data-toggle="tooltip" data-placement="top" title="This is test"></span>
-        @*<img src="~/Content/tools.png" width="30" />*@
+        @*<img src="~/Content/toolsgray.png" width="30" />*@
     </div>
 </div>
 <p>
