--- a/App.Web/Content/css/brac/bootstrap-legacy.css
+++ b/App.Web/Content/css/brac/bootstrap-legacy.css
@@ -1,6 +1,13 @@
 ﻿.modal {
     height: calc(95vh);
+    font-size: 14px;
 }
+
+    .modal input, .modal select, .modal select option {
+        font-size: 14px;
+    }
+
+
 
 .modal-backdrop {
     position: fixed;
@@ -71,7 +78,7 @@
         margin: 0;
         line-height: 30px;
         font-size: 18px;
-        color:white;
+        color: white;
     }
 
 .modal-body {
@@ -228,6 +235,64 @@
         margin: 0;
     }
 }
+
 [data-toggle="tooltip"] {
     padding: 5px;
+}
+
+td.title {
+    width: 20%;
+}
+
+h2, h3 {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+td h3, th h3 {
+    font-size: 14px;
+    font-weight: bold;
+}
+
+td.control {
+    display: flex;
+    flex-direction: row;
+}
+
+    td.control input[type=text], td.control select {
+        height: 30px;
+    }
+   
+
+
+
+
+table-striped th {
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+    background-color: #FFF;
+}
+
+
+
+.table-striped {
+    width: 100%;
+}
+.content{
+    display:none;
+}
+.btn.btn-success {
+    background-color: #D10D74;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    max-width: 150px;
+    border-radius: 5px;
 }
