--- a/App.Web/Views/RoleFeature/Index.cshtml
+++ b/App.Web/Views/RoleFeature/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@using AppProj.Web.Helpers
 @model IEnumerable<AppProj.Domain.QryRoleFeature>
 @{
-    Layout = "~/Views/Shared/_LayoutMain.cshtml";
+    Layout = "~/Views/Shared/_LayoutBrac.cshtml";
     var ajaxOpt = new AjaxOptions
     {
-        HttpMethod = "GET",
+        HttpMethod = "POST",
         UpdateTargetId = "dialog1Body",
         InsertionMode = InsertionMode.Replace,
         OnSuccess = "openDialog1('Rights')",
@@ -12,50 +12,51 @@
         OnFailure = "failure"
     };
 }
-<section id="counter-social-icon" class="utopia-widget utopia-form-box">
-    <div class="utopia-widget-title">
-        <img class="utopia-widget-icon" src="~/Content/img/icons2/history.png">
-        <span>Rights of @ViewBag.RoleName role</span>
-    </div>
-    <div class="row-fluid">
-        <div class="utopia-widget-content main-container">
-            <div class="row-fluid">
-                <div>
-                    @Ajax.ActionLink("Add Right", "AddFeature", new { roleId = @ViewBag.RoleId }, ajaxOpt, new { @class = "btn btn-success pull-right" })
-                </div>
-                <table id="myTable" class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Rights Description</th>
-                            <th></th>
-                        </tr>
-                    </thead>
 
-                </table>
-            </div>
+<div class="page-header">
+    <h2>Rights of @ViewBag.RoleName role</h2>
+
+</div>
+
+<div class="table-responsive custom-action">
+    <div id="data_table_wrapper" class="dataTables_wrapper dt-bootstrap4 no-footer">
+
+        <div class="tnav" style="">
+
         </div>
-        <p class="text" style="margin-right: 15px;">
-            @Html.ActionLink("Back to Role", "Index", "Role", null, new { @class = "close" })
-        </p>
-        <br />
-        <br />
+        <div class="custom-add">
+            @Ajax.ActionLink("Add Right", "AddFeature", new { roleId = @ViewBag.RoleId }, ajaxOpt, new { @class = "btn btn-bracify-add" })
+        </div>
+
+        <table id="myTable" class="table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Rights Description</th>
+                    <th></th>
+                </tr>
+            </thead>
+
+        </table>
+
     </div>
+    <p class="text" style="margin-right: 15px;">
+        @Html.ActionLink("Back to Role", "Index", "Role", null, new { @class = "close" })
+    </p>
+</div>
 
-
-
-</section>
 <input type="hidden" id="hdnRoleId" value="@ViewBag.RoleId" />
+
 
 @section scripts{
     <script type="text/javascript">
         $(document).ready(function () {
 
             var addPost = {
-                'roleId': 'hdnRoleId' //column number : is button group            
+                'roleId': 'hdnRoleId' //column number : is button group
             };
 
             var btns = {
-                1: false //column number : is button group            
+                1: false //column number : is button group
             };
 
             /*data grid initializer*/
