--- a/App.Web/Views/Standing/Create.cshtml
+++ b/App.Web/Views/Standing/Create.cshtml
@@ -25,7 +25,7 @@
                 Name
             </td>*@
             <td class="control">
-                @Html.TextAreaFor(model => model.Name, new { @style = "width:100%;"})
+                @Html.TextAreaFor(model => model.Name, new { @class = "input-group   form-control input" , @style = "width:100%;"})
                 @Html.ValidationMessageFor(model => model.Name)
             </td>
         </tr>
@@ -49,7 +49,7 @@
         </tr>        
     </table>
     <p>
-        <input id="save-submit" type="submit" value="Save" class="btn btn-primary" />
+        <input id="save-submit" type="submit" value="Save" class="btn btn-bracify font-color-white" />
     </p>
 }
 <script type="text/javascript">
