--- a/App.Web/Views/SummerySubmission/CreateMulti.cshtml
+++ b/App.Web/Views/SummerySubmission/CreateMulti.cshtml
@@ -43,7 +43,7 @@
                 তারিখ
             </td>
             <td class="control" colspan="2">
-                @Html.TextBoxFor(model => model.Date, "{0:dd MMM, yyyy}", new { @class = "input-group datepicker flatpickr form-control input", @placeholder = "Date" })
+                @Html.TextBoxFor(model => model.Date, "{0:dd MMM, yyyy}", new { @class = "searchable-dropdown form-control", @placeholder = "Date" })
                 @Html.ValidationMessageFor(model => model.Date)
             </td>
         </tr>
@@ -51,11 +51,11 @@
             <th>তথ্যের উৎস</th>
             <th>
                 কতজনের সাক্ষাত নেয়া হয়েছে
-                <span data-toggle="tooltip" data-placement="right" title="Number of individuals who have been contacted <br> যোগাযোগ করা হয়েছে এমন ব্যক্তিদের সংখ্যা"><img src="~/Content/tools.png" width="30" /></span>
+                <span data-toggle="tooltip" data-placement="right" title="Number of individuals who have been contacted <br> যোগাযোগ করা হয়েছে এমন ব্যক্তিদের সংখ্যা"><img src="~/Content/toolsgray.png" width="30" /></span>
             </th>
             <th>
                 পিন (যার কাছ থেকে ডাটা নেয়া হয়েছে )
-                <span data-toggle="tooltip" data-placement="bottom" title=" PIN of the staff who has given you the data<br>যে কর্মী থেকে আপনি তথ্য নিয়েছেন তার পিন"><img src="~/Content/tools.png" width="30" /></span>
+                <span data-toggle="tooltip" data-placement="bottom" title=" PIN of the staff who has given you the data<br>যে কর্মী থেকে আপনি তথ্য নিয়েছেন তার পিন"><img src="~/Content/toolsgray.png" width="30" /></span>
             </th>
         </tr>
         @for (int i = 0; i < Model.MultiDatas.Count; i++)
@@ -66,10 +66,10 @@
                     @Html.HiddenFor(model => model.MultiDatas[i].Id)
                 </td>
                 <td>
-                    @Html.TextBoxFor(model => model.MultiDatas[i].Count, new { @class = "input-group datepicker flatpickr form-control input" })
+                    @Html.TextBoxFor(model => model.MultiDatas[i].Count, new { @class = "searchable-dropdown form-control" })
                 </td>
                 <td>
-                    @Html.TextBoxFor(model => model.MultiDatas[i].CollectedBy, new { @class = "input-group datepicker flatpickr form-control input" })
+                    @Html.TextBoxFor(model => model.MultiDatas[i].CollectedBy, new { @class = "searchable-dropdown form-control" })
                 </td>
 
             </tr>
@@ -83,11 +83,11 @@
                             <th>তথ্যের উৎস</th>
                             <th>
                                 কতজনের সাক্ষাত নেয়া হয়েছে
-                                <span data-toggle="tooltip" data-placement="right" title="Number of individuals who have been contacted <br> যোগাযোগ করা হয়েছে এমন ব্যক্তিদের সংখ্যা"><img src="~/Content/tools.png" width="30" /></span>
+                                <span data-toggle="tooltip" data-placement="right" title="Number of individuals who have been contacted <br> যোগাযোগ করা হয়েছে এমন ব্যক্তিদের সংখ্যা"><img src="~/Content/toolsgray.png" width="30" /></span>
                             </th>
                             <th>
                                 পিন (যার কাছ থেকে ডাটা নেয়া হয়েছে )
-                                <span data-toggle="tooltip" data-placement="bottom" title=" PIN of the staff who has given you the data<br>যে কর্মী থেকে আপনি তথ্য নিয়েছেন তার পিন"><img src="~/Content/tools.png" width="30" /></span>
+                                <span data-toggle="tooltip" data-placement="bottom" title=" PIN of the staff who has given you the data<br>যে কর্মী থেকে আপনি তথ্য নিয়েছেন তার পিন"><img src="~/Content/toolsgray.png" width="30" /></span>
                             </th>
                         </tr>
                         @for (int i = 0; i < Model.MultiDatas.Count; i++)
@@ -113,20 +113,21 @@
             <td class="title">
                 মন্তব্য
                 <span data-toggle="tooltip" data-placement="right" title="Enter any comments or feedback that you may have<br>আপনার কোনো মন্তব্য থাকলে তা লিখুন
-"><img src="~/Content/tools.png" width="30" /></span>
+"><img src="~/Content/toolsgray.png" width="30" /></span>
             </td>
             <td class="control" colspan="2">
-                @Html.TextAreaFor(model => model.Description, new { @class = "input-group datepicker flatpickr form-control input"})
+                @Html.TextAreaFor(model => model.Description, new { @class = "searchable-dropdown form-control" })
                 @Html.ValidationMessageFor(model => model.Description)
             </td>
         </tr>
 
-        <tr>
-            <td class="control" colspan="3">
-                <input id="save-submit" type="submit" value="সেভ করুন" class="btn btn-bracify font-color-white" />
-            </td>
-        </tr>
+
     </table>
+    <div class="control mt-3">
+        <p>
+            <input id="save-submit" type="submit" value="সেভ করুন" class="btn btn-bracify font-color-white">
+        </p>
+    </div>
 
 }
 <script type="text/javascript">
