--- a/App.Web/Views/UserProfile/Index.cshtml
+++ b/App.Web/Views/UserProfile/Index.cshtml
@@ -44,7 +44,7 @@
         <div class="tnav w-25">
             <div class="table-filter-nav">
                 <div class="filter-item">
-                    <label for="info_source">User Nane</label>
+                    <label for="info_source">User Name</label>
                     @Html.TextBox("txtSearch", null, new { @class = "input-group form-control input active", @placeholder = "Search" })
                 </div>
                 <div class="filter-item">
@@ -62,19 +62,19 @@
             }
         </div>
         <table id="myTable" class="table table-striped table-bordered row-fluid fixed_headers">
-            <thead>
+            <thead class="thead-yellow">
 
                 <tr>
                     <th>
                         PIN
                     </th>
-                    <th>
+                    <th class="w-200">
                         Name
                     </th>
-                    <th>
+                    <th class="w-200">
                         Email
                     </th>
-                    <th>
+                    <th class="w-200">
                         Role
                     </th>
                     <th>
